# range_experiments

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  basic_bench.cpp
example/: CMakeLists.txt  filter.cpp  pure_lambdas.cpp  with_lambdas.cpp
include/lt3/: range.h
include/lt3/range/: defines.h  filter.h  pipe_adaptor.h  pure_lambdas.h  range_wrapper.h  test_range.h  with_lambdas.h
test/: CMakeLists.txt  basic_test.cpp
tests/: CMakeLists.txt  basic_test.cpp
